--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -1,60 +1,25 @@
-name: RDP-Windows2021
-on: workflow_dispatch
+name: CI
+
+on: [push, workflow_dispatch]
 
 jobs:
-
   build:
 
-    runs-on: windows-2022
-
-    timeout-minutes: 360
+    runs-on: windows-latest
 
     steps:
-
-    - name: Download Program Ngrok.
-
-      run: |
-        Invoke-WebRequest https://bin.equinox.io/c/4VmDzA7iaHb/... -OutFile ngrok.zip
-        Invoke-WebRequest https://raw.githubusercontent.com/bvn... -OutFile start.bat
-        Invoke-WebRequest https://telegra.ph/file/315ab294f1b5b... -OutFile wallpaper.bmp
-        Invoke-WebRequest https://raw.githubusercontent.com/bvn... -OutFile wallpaper.bat
-    - name: Downloading Launcher.
-
-      run: |
-        Invoke-WebRequest https://raw.githubusercontent.com/bvn... -OutFile Node.js.lnk
-        Invoke-WebRequest https://raw.githubusercontent.com/bvn... -OutFile "Visual Studio 2019.lnk"
-    - name: Extrak Ngrok File.
-
+    - name: Download
+      run: Invoke-WebRequest https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-windows-amd64.zip -OutFile ngrok.zip
+    - name: Extract
       run: Expand-Archive ngrok.zip
-
-    - name: Menghubungkan Ke Ngrok Account.
-
+    - name: Auth
       run: .\ngrok\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
-
       env:
-
         NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
-
-    - name: Activated RDP.
-
-      run: | 
-        Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server'-name "fDenyTSConnections" -Value 0
-        Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
-        Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 1
-        copy wallpaper.bmp D:\a\wallpaper.bmp
-        copy wallpaper.bat D:\a\wallpaper.bat
-        copy Node.js.lnk C:\Users\Public\Desktop\Node.js.lnk
-        copy "Visual Studio 2019.lnk" "C:\Users\Public\Desktop\Visual Studio 2019.lnk"
-    - name: Membuat Tunnel.
-
-      run: Start-Process Powershell -ArgumentList '-Noexit -Command ".\ngrok\ngrok.exe tcp --region ap 3389"'
-
-    - name: Menghubungkan ke RDP-Windows2020.
-
-      run: cmd /c start.bat
-
-    - name: Berhasil!.
-
-      run: | 
-        Invoke-WebRequest https://github.com/bvnbvn000/zabtechr... -OutFile loop.ps1
-        ./loop.ps1
+    - name: Enable TS
+      run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server'-name "fDenyTSConnections" -Value 0
+    - run: Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
+    - run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 1
+    - run: Set-LocalUser -Name "runneradmin" -Password (ConvertTo-SecureString -AsPlainText "P@ssw0rd!" -Force)
+    - name: Create Tunnel
+      run: .\ngrok\ngrok.exe tcp 3389
